# templates

./: .gitignore
assembly/aarch64/: driver.cc  hello.s  loop.s  sve-test.s  test.s
bash/: basic.sh  bill-config-gcc.sh  check-ports.sh  gcc-config.sh  loop-through-ascii-table.sh  loop-through-csv.sh  redis.sh  setup-kubernetes.sh
bash/bigo/: mysql.sh
bash/jdk/: include.sh  jtreg.sh
c-c++/: generate.h  print.h  random.h  random_test.cc
clang/: llvm.clang-format
cmake/: CMakeLists-deprecated.txt  CMakeLists.txt  modern.cmake
cmake/example-modern/: CMakeLists.txt  add_test.cc  main.cc
docker/: Dockerfile  runc-mem-cpu-usage.py
javascript/: pac.js
jdk/: jtreg.clj
jdk/bash/: include.sh  setup-env.sh
jdk/bash/yang/: jtreg.sh  run-test.sh  single-jtreg.sh
jdk/python/: J.py  jtreg.py  mkjdk.py  rebuild.py  webrevsync.py
latex/: beamer.tex  chinese-support.tex  latexmkrc  macros.tex
linux/: change_sys_register.c
python/: lat_mem_rd2excel.1to1.py  lat_mem_rd2excel.nto1.py  multiload2excel.py
ssh/: config
systemd/: template.service
